--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -510,9 +510,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .ml-10 {
   margin-left: 2.5rem;
 }
-.mb-6 {
-  margin-bottom: 1.5rem;
-}
 .mb-5 {
   margin-bottom: 1.25rem;
 }
@@ -659,11 +656,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .gap-24 {
   gap: 6rem;
 }
-.gap-y-5 {
-  row-gap: 1.25rem;
-}
 .gap-y-2 {
   row-gap: 0.5rem;
+}
+.gap-y-5 {
+  row-gap: 1.25rem;
 }
 .space-x-5 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
@@ -817,6 +814,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   font-size: 1.125rem;
   line-height: 1.75rem;
 }
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
 .font-bold {
   font-weight: 700;
 }
@@ -836,9 +837,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
-.text-gray-500 {
+.text-blue-500 {
   --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
+  color: rgb(59 130 246 / var(--tw-text-opacity));
 }
 .text-gray-600 {
   --tw-text-opacity: 1;
@@ -872,13 +873,13 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
 }
+.text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
+}
 .text-gray-900 {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
-}
-.text-blue-500 {
-  --tw-text-opacity: 1;
-  color: rgb(59 130 246 / var(--tw-text-opacity));
 }
 .underline {
   -webkit-text-decoration-line: underline;
